--- a/demo.html
+++ b/demo.html
@@ -170,7 +170,7 @@
     <!-- Include largetable script and use it-->
     <script src="largetable.js"></script>
     <script>
-        largetable();
+        $("table").largetable();
     </script>
 </body>
 </html>
