Add maximize function and button (#2)

--- a/demo.html
+++ b/demo.html
@@ -170,7 +170,9 @@
 	<!-- Include largetable script and use it-->
 	<script src="largetable.js"></script>
 	<script>
-		$("table").largetable();
+		$("table").largetable({
+			enableMaximize: true
+		});
 	</script>
 </body>
 </html>
