Dispatch toggleMaximize event (#2)

--- a/demo.html
+++ b/demo.html
@@ -172,7 +172,11 @@
 	<script>
 		$("table").largetable({
 			enableMaximize: true
+		})
+		.on("toggleMaximize", function() {
+			console.log("toggleMaximize event");
 		});
+		
 	</script>
 </body>
 </html>
