Dispatch "maximize" and "unmaximize" events

--- a/demo.html
+++ b/demo.html
@@ -175,6 +175,12 @@
 		})
 		.on("toggleMaximize", function() {
 			console.log("toggleMaximize event");
+		})
+		.on("maximize", function () {
+			console.log("maximize event");
+		})
+		.on("unmaximize", function () {
+			console.log("unmaximize event");
 		});
 		
 	</script>
